overlays/dev/deployment-patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-begining
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: app
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
