overlays/dev/kratos-patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kratos
spec:
  template:
    spec:
      containers:
        - name: kratos
          resources:
            requests: { cpu: 100m, memory: 128Mi }
